// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots VerticalTabs Active tiers 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-active={true}
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <button
          data-css-1ahtnia=""
          data-css-f6e4dj=""
          onClick={[Function]}
        >
          <div
            data-active={true}
            data-css-1u6ueg5=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-9nfe05=""
          >
            Tier 1 active
          </span>
        </button>
      </div>
    </li>
    <li>
      <div
        data-active={true}
        data-css-1dhocok=""
        data-css-1hxx1qx=""
      >
        <button
          data-css-1ahtnia=""
          data-css-mbxfai=""
          onClick={[Function]}
        >
          Tier 2 active
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs CollapsibleGroup 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <div
            data-css-1u6ueg5=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-9nfe05=""
          >
            Reports home
          </span>
        </span>
      </div>
    </li>
    <div>
      <h2
        data-css-1qwecpt=""
      >
        <button
          aria-label="Collapse"
          data-css-nhugdf=""
          onClick={[Function]}
        >
          <div
            data-css-4gnhqq=""
          >
            <span
              data-css-9nfe05=""
            >
              Operational Reports
            </span>
            <div
              data-css-12f5sv2=""
              data-css-xnveog=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        data-css-r5lswg=""
      >
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Work log
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Project timeline
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Leaderboard
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Retrospective
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Snapshot
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Daily update
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Spot check
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <h2
        data-css-1qwecpt=""
      >
        <button
          aria-label="Expand"
          data-css-nhugdf=""
          onClick={[Function]}
        >
          <div
            data-css-4gnhqq=""
          >
            <span
              data-css-9nfe05=""
            >
              Reviews & Collaboration
            </span>
            <div
              data-css-12f5sv2=""
              data-css-1byjzqg=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-r5lswg=""
      />
    </div>
    <div>
      <h2
        data-css-1qwecpt=""
      >
        <button
          aria-label="Expand"
          data-css-nhugdf=""
          onClick={[Function]}
        >
          <div
            data-css-4gnhqq=""
          >
            <span
              data-css-9nfe05=""
            >
              Fundamentals
            </span>
            <div
              data-css-12f5sv2=""
              data-css-1byjzqg=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-r5lswg=""
      />
    </div>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs Group 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <h2
        data-css-1qwecpt=""
      >
        <span
          data-css-9nfe05=""
        >
          Introduction
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <span
                data-css-9nfe05=""
              >
                Install
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <span
                data-css-9nfe05=""
              >
                Design assets
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <span
                data-css-9nfe05=""
              >
                Contribute
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <span
                data-css-9nfe05=""
              >
                Roadmap
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
    <hr
      data-css-1ap4iwc=""
    />
    <li>
      <h2
        data-css-1qwecpt=""
      >
        <span
          data-css-9nfe05=""
        >
          Foundations
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Color
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Typography
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Spacing
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Iconography
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <div
                data-css-1u6ueg5=""
                data-css-otejxm=""
              >
                <svg
                  fill="none"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                  />
                </svg>
              </div>
              <span
                data-css-9nfe05=""
              >
                Voice & Tone
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
    <hr
      data-css-1ap4iwc=""
    />
    <li>
      <h2
        data-css-1qwecpt=""
      >
        <span
          data-css-9nfe05=""
        >
          Components
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-active={true}
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <span
                data-css-9nfe05=""
              >
                Avatar
              </span>
            </span>
          </div>
          <ul
            data-css-gkw1j5=""
          >
            <li>
              <div
                data-active={true}
                data-css-1dhocok=""
                data-css-1hxx1qx=""
              >
                <span
                  data-css-194prvg=""
                  data-css-mbxfai=""
                >
                  Prop types
                </span>
              </div>
            </li>
            <li>
              <div
                data-css-1dhocok=""
                data-css-1hxx1qx=""
              >
                <span
                  data-css-194prvg=""
                  data-css-mbxfai=""
                >
                  Guidelines
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <span
                data-css-9nfe05=""
              >
                Button
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <span
                data-css-9nfe05=""
              >
                Badge
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-19euw49=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-f6e4dj=""
            >
              <span
                data-css-9nfe05=""
              >
                Breadcrumb
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs Href changes tier tag to link 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <a
          data-css-10d53uz=""
          data-css-f6e4dj=""
          href=" "
        >
          <span
            data-css-9nfe05=""
          >
            Tier 1 link
          </span>
        </a>
      </div>
    </li>
    <li>
      <div
        data-css-1dhocok=""
        data-css-1hxx1qx=""
      >
        <a
          data-css-10d53uz=""
          data-css-mbxfai=""
          href=" "
        >
          Tier 2 link
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs Long text 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <h2
        data-css-1qwecpt=""
      >
        <span
          data-css-9nfe05=""
        >
          The technology skills platform
        </span>
      </h2>
      <ul
        data-css-gkw1j5=""
      />
    </li>
    <div>
      <h2
        data-css-1qwecpt=""
      >
        <button
          aria-label="Expand"
          data-css-nhugdf=""
          onClick={[Function]}
        >
          <div
            data-css-4gnhqq=""
          >
            <span
              data-css-9nfe05=""
            >
              The technology skills platform
            </span>
            <div
              data-css-12f5sv2=""
              data-css-1byjzqg=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        data-css-r5lswg=""
      />
    </div>
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <span
            data-css-9nfe05=""
          >
            The technology skills platform
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-1dhocok=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-mbxfai=""
        >
          The technology skills platform
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs No Group 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <span
            data-css-9nfe05=""
          >
            Dashboard
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <span
            data-css-9nfe05=""
          >
            Account
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-active={true}
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <div
            data-active={true}
            data-css-1u6ueg5=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-9nfe05=""
          >
            People
          </span>
        </span>
      </div>
      <ul
        data-css-gkw1j5=""
      >
        <li>
          <div
            data-active={true}
            data-css-1dhocok=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-mbxfai=""
            >
              Organization
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dhocok=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-mbxfai=""
            >
              Admins
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dhocok=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-mbxfai=""
            >
              Managers
            </span>
          </div>
        </li>
        <li>
          <div
            data-css-1dhocok=""
            data-css-1hxx1qx=""
          >
            <span
              data-css-194prvg=""
              data-css-mbxfai=""
            >
              Unassigned users
            </span>
          </div>
        </li>
      </ul>
    </li>
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <div
            data-css-1u6ueg5=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-9nfe05=""
          >
            Pending invites
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <div
            data-css-1u6ueg5=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-9nfe05=""
          >
            Analytics
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <div
            data-css-1u6ueg5=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-9nfe05=""
          >
            Log
          </span>
        </span>
      </div>
    </li>
    <hr
      data-css-1ap4iwc=""
    />
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <div
            data-css-1u6ueg5=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-9nfe05=""
          >
            Item label
          </span>
        </span>
      </div>
    </li>
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <span
          data-css-194prvg=""
          data-css-f6e4dj=""
        >
          <div
            data-css-1u6ueg5=""
            data-css-otejxm=""
          >
            <svg
              fill="none"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 3h-2v2h2V3zM13 3v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zM3 11v2h2v-2H3zM3 17v-2h2v2H3zM3 19v1.1a.9.9 0 00.9.9H5v-2H3zM7 19v2h2v-2H7zM11 19v2h2v-2h-2zM15 19v2h2v-2h-2zM19 19v2h1.1a.9.9 0 00.9-.9V19h-2zM21 15h-2v2h2v-2zM21 11v2h-2v-2h2zM21 9V7h-2v2h2zM21 3.9V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
              />
            </svg>
          </div>
          <span
            data-css-9nfe05=""
          >
            Item label
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots VerticalTabs onClick no href changes tier tag to button 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    data-css-nqd4p3=""
  >
    <li>
      <div
        data-css-19euw49=""
        data-css-1hxx1qx=""
      >
        <button
          data-css-1ahtnia=""
          data-css-f6e4dj=""
          onClick={[Function]}
        >
          <span
            data-css-9nfe05=""
          >
            Tier 1 button
          </span>
        </button>
      </div>
    </li>
    <li>
      <div
        data-css-1dhocok=""
        data-css-1hxx1qx=""
      >
        <button
          data-css-1ahtnia=""
          data-css-mbxfai=""
          onClick={[Function]}
        >
          Tier 2 button
        </button>
      </div>
    </li>
  </ul>
</div>
`;
